--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@casl/ability": "^6.2.0",
     "@casl/vue": "^2.2.0",
     "@floating-ui/dom": "1.2.8",
+    "@vuepic/vue-datepicker": "^8.2.0",
     "@vueuse/core": "^10.1.2",
     "@vueuse/math": "^10.1.2",
     "apexcharts-clevision": "^3.28.5",
@@ -64,6 +65,7 @@
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "eslint-plugin-vue": "^9.13.0",
+    "laravel-vite-plugin": "^0.7.5",
     "postcss-html": "^1.5.0",
     "stylelint": "14.15.0",
     "stylelint-config-idiomatic-order": "9.0.0",
@@ -75,8 +77,7 @@
     "vite-plugin-pages": "^0.30.1",
     "vite-plugin-vue-layouts": "^0.8.0",
     "vite-plugin-vuetify": "1.0.2",
-    "vue-shepherd": "^3.0.0",
-    "laravel-vite-plugin": "^0.7.5"
+    "vue-shepherd": "^3.0.0"
   },
   "packageManager": "yarn@1.22.18",
   "resolutions": {
